--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -14,10 +14,24 @@
     
 <h3>{% trans "Sign In" %}</h3>
 
+{% get_providers as socialaccount_providers %}
+
+{% if socialaccount_providers %}
+
 
 <p>{% blocktrans %}Welcome back to the code|star blog. To leave a comment or like a post, please log in. If you
   have not created an account yet, then <a class="link" href="{{ signup_url }}">sign up</a>
   first.{% endblocktrans %}</p>
+
+  <div class="socialaccount_ballot">
+    <ul class="socialaccount_providers">
+      {% include "socialaccount/snippets/provider_list.html" with process="login" %}
+    </ul>
+    <div class="login-or">{% trans 'or' %}</div>
+  </div>
+  {% include "socialaccount/snippets/login_extra.html" %}
+  {% endif %}
+
 </div>
 </div>
 <div class="row">
